[gd_scene load_steps=6 format=3 uid="uid://veqpg45p3lr4"]

[ext_resource type="Script" uid="uid://p8714q6f71py" path="res://Scripts/network.gd" id="1_ktjfp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4cby"]
bg_color = Color(0.3106173, 0.31061706, 0.31061706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hobmd"]
bg_color = Color(0.21950102, 0.21950102, 0.21950102, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nan6c"]
bg_color = Color(0.12941177, 0.12941177, 0.12941177, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b41pr"]
bg_color = Color(0.12941177, 0.12941177, 0.12941177, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Network_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ktjfp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1916.0
offset_bottom = 1084.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.52500004
anchor_right = 0.5
anchor_bottom = 0.52500004
offset_left = -494.0
offset_top = -164.00006
offset_right = 506.0
offset_bottom = 164.99994
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="server" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_b4cby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hobmd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_nan6c")
theme_override_styles/focus = SubResource("StyleBoxFlat_b41pr")
text = "Create Server"

[node name="client" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_b4cby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hobmd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_nan6c")
theme_override_styles/focus = SubResource("StyleBoxFlat_b41pr")
text = "Join Server"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_b4cby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hobmd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_nan6c")
theme_override_styles/focus = SubResource("StyleBoxFlat_b41pr")
text = "Back
"

[node name="ip_address_enter" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.142
anchor_right = 0.5
anchor_bottom = 0.142
offset_left = -540.0
offset_top = -35.36
offset_right = 544.0
offset_bottom = 60.64
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
placeholder_text = "ENTER IP ADDRESS"
alignment = 1

[node name="take_df_ip" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35900003
anchor_top = 0.264
anchor_right = 0.35900003
anchor_bottom = 0.264
offset_left = -271.28003
offset_top = -40.119995
offset_right = 256.71997
offset_bottom = 42.880005
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_b4cby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hobmd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_nan6c")
theme_override_styles/focus = SubResource("StyleBoxFlat_b41pr")
text = "Set default IP"

[node name="submit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35900003
anchor_top = 0.264
anchor_right = 0.35900003
anchor_bottom = 0.264
offset_left = 291.71997
offset_top = -40.119995
offset_right = 819.72
offset_bottom = 42.880005
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_b4cby")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hobmd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_nan6c")
theme_override_styles/focus = SubResource("StyleBoxFlat_b41pr")
text = "Submit"

[node name="alert" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.34
anchor_right = 0.5
anchor_bottom = 0.34
offset_left = -313.0
offset_top = -22.200012
offset_right = 323.0
offset_bottom = 22.799988
grow_horizontal = 2
theme_override_colors/font_color = Color(0.4745098, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "ALERT"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/server" to="." method="_on_server_pressed"]
[connection signal="pressed" from="VBoxContainer/client" to="." method="_on_client_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="text_submitted" from="ip_address_enter" to="." method="_on_ip_address_enter_text_submitted"]
[connection signal="pressed" from="take_df_ip" to="." method="_on_take_df_ip_pressed"]
[connection signal="pressed" from="submit" to="." method="_on_submit_pressed"]
